add accordion section

--- a/css/main.css
+++ b/css/main.css
@@ -13000,12 +13000,108 @@ small {
   align-items: flex-end;
 }
 
+.stat-card {
+  text-align: center;
+}
+.stat-card__icon {
+  min-height: 98px;
+  display: inline-flex;
+  align-items: center;
+}
+.stat-card__heading {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 1.2;
+  color: #002147;
+}
+
+.accordions > *:not(:last-child) {
+  margin-bottom: 15px;
+}
+
+.accordion {
+  padding: 20px 60px 24px 20px;
+  text-align: initial;
+  border-radius: 15px;
+  background-color: #f3f2f6;
+  color: #002147;
+  user-select: none;
+  transition: all 0.2s ease;
+  position: relative;
+}
+.accordion__heading {
+  font-size: 18px;
+  font-weight: 700;
+  color: #002147;
+}
+.accordion__body {
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.2s ease;
+}
+.accordion::after {
+  content: "";
+  position: absolute;
+  top: 26px;
+  right: 20px;
+  height: 100%;
+  width: 25px;
+  background-image: url(../images/svg/icon-arrow-down.svg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  transition: transform 0.2s ease;
+  transform-origin: 50% 5px;
+}
+.accordion--active::after {
+  transform: rotate(180deg);
+}
+.accordion--active .accordion__body {
+  padding-top: 14px;
+}
+.accordion--active {
+  box-shadow: 4px 4px 20px 5px rgba(0, 33, 71, 0.1);
+  background-color: #fff;
+}
+@media (min-width: 992px) {
+  .accordion {
+    padding: 32px 40px;
+  }
+  .accordion__heading {
+    font-size: 20px;
+  }
+  .accordion::after {
+    top: 36px;
+    right: 40px;
+    height: 100%;
+    width: 30px;
+  }
+  .accordion--active .accordion__body {
+    padding-top: 22px;
+  }
+}
+@media (min-width: 1200px) {
+  .accordion {
+    padding-right: 100px;
+  }
+}
+
 .section {
   padding: 70px 0;
 }
 @media (min-width: 992px) {
   .section {
     padding: 150px 0;
+  }
+}
+
+.section-stats {
+  background-image: url(../../images/bg-stats.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+}
+@media (max-width: 767.98px) {
+  .section-stats {
+    padding-bottom: 618px !important;
   }
 }
 
