--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,8 @@
 @import "components/card-step";
 @import "components/card-loan";
 @import "components/card-service";
+@import "components/card-stat";
+@import "components/accordion";
 
 // PAGES
 @import "pages/home";
