--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -2,7 +2,7 @@
   background-color: $secondary;
   padding: 50px 0 70px;
 
-  background-image: url(../../images/bg-header.png);
+  background-image: url(../images/bg-header.png);
   background-repeat: no-repeat;
   background-position: center right;
 
