--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,6 +24,7 @@
 @import "components/card-loan";
 @import "components/card-service";
 @import "components/card-stat";
+@import "components/card-review";
 @import "components/accordion";
 
 // PAGES
