--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -7,11 +7,54 @@
 
 // SECTION STATS
 .section-stats {
-  background-image: url(../../images/bg-stats.png);
+  background-image: url(../images/bg-stats.png);
   background-repeat: no-repeat;
   background-position: left bottom;
 
   @include media-breakpoint-down(md) {
     padding-bottom: 618px !important;
+  }
+}
+
+// SECTION REVIEWS
+.reviews-swiper {
+  padding: 20px 25px 40px;
+
+  .swiper-pagination-bullets {
+    bottom: 0;
+  }
+
+  .swiper-pagination-bullet {
+    width: 10px;
+    height: 10px;
+    background-color: #dcdce4;
+    opacity: 1;
+    margin: 0 6px;
+  }
+
+  .swiper-pagination-bullet-active {
+    background-color: $secondary;
+  }
+
+  @include media-breakpoint-down(lg) {
+    margin-right: -17px;
+    margin-left: -17px;
+  }
+
+  @include media-breakpoint-up(lg) {
+    padding: 20px 10px 40px;
+  }
+}
+
+// SECTION FORM
+.section-form {
+  padding: 60px 0 95px;
+  background-image: url(../images/bg-header.png);
+  background-repeat: no-repeat;
+  background-position: right center;
+
+  @include media-breakpoint-up(lg) {
+    padding: 120px 0 145px;
+    background-position: right bottom;
   }
 }
